--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,9 +23,9 @@
         </activity>
         <activity android:name=".activities.DetailActivity" />
         <activity android:name=".activities.PlayMusicActivity"
-            android:theme="@style/AppTheme.NoActionBar" android:launchMode="singleTop"/>
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <service android:name=".services.PlayMusicService" />
+        <service android:name=".services.PlayMusicService" android:stopWithTask="false" android:enabled="true" android:exported="true" />
 
         <activity android:name=".activities.AlbumListActivity"></activity>
         <receiver android:name=".activities.PlayMusicActivity$BroadcastPrevMusic"/>
