--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,13 +28,23 @@
             android:theme="@style/AppTheme.NoActionBar" />
 
         <service android:name=".services.PlayMusicService" />
-
-        <activity android:name=".activities.AlbumListActivity"></activity>
-        <receiver android:name="com.example.iceman.mp3player.activities.PlayMusicActivity$BroadcastPrevMusic" >
+        <receiver android:name=".receivers.NextMusicBroadcastReceiver">
             <intent-filter>
-                <action android:name="com.example.iceman.Mp3Player.ACTION_PREV" />
+                <action android:name="com.example.iceman.Mp3Player.ACTION_NEXT"/>
             </intent-filter>
         </receiver>
+        <receiver android:name=".receivers.PlayPauseMusicBroadcastReceiver">
+            <intent-filter>
+                <action android:name="com.example.iceman.Mp3Player.ACTION_PLAY_PAUSE"/>
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".activities.AlbumListActivity"></activity>
+        <receiver android:name=".receivers.PrevMusicBroadcastReceiver">
+        <intent-filter>
+            <action android:name="com.example.iceman.Mp3Player.ACTION_PREV" />
+        </intent-filter>
+    </receiver>
     </application>
 
 </manifest>
