--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,11 @@
         <activity
             android:name=".activities.AlbumListActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <receiver android:name=".receivers.HeadSetReceiver">
+            <intent-filter>
+                <action android:name="android.media.AUDIO_BECOMING_NOISY"/>
+            </intent-filter>
+        </receiver>
 
         <receiver android:name=".receivers.PrevMusicBroadcastReceiver">
             <intent-filter>
